fix template validation

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -691,7 +691,7 @@
         </div>
         <div class="col-md-12">
         <table class="table table-bordered">
-            <tr class="bg-primary"><td></td><td></td><td colspan="4" class="text-center"><h4>Modificación{%if year_data.actualizado is not None %} al {{ year_data.actualizado }}{% else %}Inicial{% endif %}</h4></td><td colspan="4"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
+            <tr class="bg-primary"><td></td><td></td><td colspan="4" class="text-center"><h4>Modificación{%if year_data.actualizado %} al {{ year_data.actualizado }}{% else %} Inicial{% endif %}</h4></td><td colspan="4"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
             <tr class="bg-primary"> <th>Rubros de gastos</th> <th>Inicial</th>
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info blanco">%</a></th>
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="blanco">%</a></th>
