fix variations emplate charts

--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -13,19 +13,25 @@
         <h2> <strong>Detalle de {{indicator_name}}</strong> <br/> del período</h2>
         <hr class="pma-line-2">
         <div class="col-md-7">
+                    <!--
             <div class="chart-update col-md-1 float-left">
+                    
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
                         pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="pie-1"></span>
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="bar-1"></span>
                     <span class="pma-icon pe-7s-graph2 pma-fg-gray toggle-chart"
                         aria-hidden="true" id="icons"></span>
+                        
+                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="bar"></span>
             </div>
-            <div class="col-md-11 chart-container">
+                        -->
+            <div class="col-md-11 bubbletree-container chart-container">
+                <!--
                 <div id="pie-1" class="view-main"> Pastel por
                 categorias </div>
-                <div id="bar-1" class="view-alternative"> Pastel por
+                -->
+                <div id="bar" class="view-main"> Pastel por
                 categorias </div>
             </div>
         </div>
@@ -508,4 +514,5 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    {{ charts|load_charts:"bar" }}
 {% endblock %}
