Change menu category label

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -78,7 +78,7 @@
                         {% endif %}
                         {% endfor %}
                           <li><a href="/documento/marco-legal/">Marco Legal</a></li>
-                          <li><a href="/documento/analisis-presupuestario/">Análisis Presupuestario </a></li>
+                          <li><a href="/documento/analisis-presupuestario/">Entendiendo los Presupuestos Municipales</a></li>
                     </ul>
                 </li>
                 {% comment %}
