--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -309,13 +309,72 @@
 {% block section4 %}
 <div class="container wide">
     <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12">
             <h2><strong>Modificaciones al presupuesto municipal</strong><br>
             Millones de córdobas corrientes </h2>
+            <hr class="pma-line-2" />
         </div>
     </div>
     <div class="row">
+        <div class="col-md-6">
+        <h2><strong>Ingresos corrientes propios</strong></h2>
+        <hr class="pma-line-4" />
+        <table class="table table-condensed">
+            <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th> 
+                <th>Actualizado</th> <th>Ejecutado</th>
+            </tr>
+            {% for row in rubros %}
+                <tr>
+                    <td class="pull-left">{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
+                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+
+                    <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
+                    <td class="text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
+                </tr>
+            {% endfor %}
+            <tr class="bold">
+                <td>TOTAL</td>
+                <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
+                <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
+                <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
+            </tr>
+        </table>
+        </div>
+        <div class="col-md-6">
+        <h2><strong>Gastos corrientes totales</strong></h2>
+        <hr class="pma-line-4" />
+        <table class="table table-condensed">
+            <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th> 
+                <th>Actualizado</th><th>Ejecutado</th>
+            </tr>
+            {% for row in rubrosg %}
+                <tr>
+                    <td class="pull-left">{% firstof row.tipogasto__nombre row.tipogasto__clasificacion %}</td>
+                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+
+                    <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
+                    <td class="text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
+                </tr>
+            {% endfor %}
+            <tr class="bold">
+                <td>TOTAL</td>
+                <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
+                <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
+                <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
+            </tr>
+        </table>
+        </div>
+
+        <div class="container">
+            <div class="col-md-12 text-center medium">
+                <button id="show-detail-2" class="blanco btn pma-bg-blue more" type="submit">
+                Ver detalles </button>
+            </div>
+        </div>
+
+        <div id="detail-2" class="row">
         <div class="col-md-12">
+        <h2><strong>Detalle de modificaciones en</strong> ingresos corrientes propios</h2>
         <table class="table table-condensed">
             <tr>
                 <td></td>
@@ -400,15 +459,8 @@
             </tr>
         </table>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <h2><strong>Modificaciones al presupuesto municipal</strong><br>
-            Millones de córdobas corrientes </h2>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-md-12">
+        <h2><strong>Detalle de modificaciones en</strong> gastos corrientes totales</h2>
         <table class="table table-condensed">
             <tr>
                 <td></td>
@@ -492,6 +544,7 @@
                 {% endwith %}
             </tr>
         </table>
+        </div>
         </div>
     </div>
 </div>
