--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="timeline container">
-        <div class="events-wrapper">
+        <div class="events-wrapper rankin">
             <div class="events" style="width: {{ otros|length|mul:300 }}{{ porclasep|length|mul:300 }}px;">
                 <ol>
                     {% for row in porclasep %}
@@ -95,11 +95,14 @@
                         <a href="#0"
                             data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}"
                             {% if municipio.slug == row.ingreso__municipio__slug %} class="selected"{% endif %}
-                            style="left: {{ forloop.counter|mul:300 }}px;">{% firstof row.nombre row.clasificacion %}
+                            style="left: {{ forloop.counter|mul:120 }}px;"><span class="posicion">{% firstof row.nombre row.clasificacion %}</span>
                             <br/>
-                            <span> Asignado: {{ row.asignado|floatformat:2 }}
-                            </span><br/>
-                            <span> Ejecutado: {{ row.ejecutado|floatformat:2 }}</span>
+                            {% if periodo_list|keyvalue:year == 'I' %}
+                              <span class="line-cifra">{{ row.asignado|floatformat:2 }}
+                              </span><br/>
+                            {% else %}
+                              <span class="line-cifra">{{ row.ejecutado|floatformat:2 }}</span>
+                            {% endif %}
                         </a>
                     </li>
                     {% endfor %}
@@ -108,11 +111,14 @@
                         <a href="#0"
                             data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}"
                             {% if forloop.first %} class="selected"{% endif %}
-                            style="left: {{ forloop.counter|mul:300 }}px;">{% firstof row.nombre row.clasificacion %}
+                            style="left: {{ forloop.counter|mul:240 }}px;"><span class="posicion2">{% firstof row.nombre row.clasificacion %}</span>
                             <br/>
-                            <span> Asignado: {{ row.asignado|floatformat:2 }}
-                            </span><br/>
-                            <span> Ejecutado: {{ row.ejecutado|floatformat:2 }}</span>
+                            {% if periodo_list|keyvalue:year == 'I' %}
+                              <span class="line-cifra">{{ row.asignado|floatformat:2 }}
+                              </span><br/>
+                            {% else %}
+                              <span class="line-cifra">{{ row.ejecutado|floatformat:2 }}</span>
+                            {% endif %}
                         </a>
                     </li>
                     {% endfor %}
@@ -141,9 +147,9 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center">
-                <button id="show-detail-1" class="btn btn-default" type="submit">
-                Ver detalles en Tabla</button>
+            <div class="col-md-12 text-center medium">
+                <button id="show-detail-1" class="blanco btn pma-bg-blue more" type="submit">
+                Ver detalles en tabla</button>
             </div>
         </div>
     </div>
@@ -312,20 +318,22 @@
         <div class="col-md-12">
             <h2><strong>Modificaciones al presupuesto municipal</strong><br>
             Millones de córdobas corrientes </h2>
-            <hr class="pma-line-2" />
+            <hr class="pma-line-3" />
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-        <h2><strong>Ingresos corrientes propios</strong></h2>
-        <hr class="pma-line-4" />
-        <table class="table table-condensed">
+          <div class="text-center">
+            <h3><strong>Ingresos corrientes propios</strong></h3>
+            <hr class="pma-line-4" />
+          </div>
+          <table class="table table-condensed">
             <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th> 
                 <th>Actualizado</th> <th>Ejecutado</th>
             </tr>
             {% for row in rubros %}
                 <tr>
-                    <td class="pull-left">{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
+                    <td>{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
 
                     <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
@@ -338,18 +346,20 @@
                 <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
                 <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
             </tr>
-        </table>
+          </table>
         </div>
         <div class="col-md-6">
-        <h2><strong>Gastos corrientes totales</strong></h2>
-        <hr class="pma-line-4" />
-        <table class="table table-condensed">
+          <div class="text-center">
+            <h3><strong>Gastos corrientes totales</strong></h3>
+            <hr class="pma-line-4" />
+          </div>
+          <table class="table table-condensed">
             <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th> 
                 <th>Actualizado</th><th>Ejecutado</th>
             </tr>
             {% for row in rubrosg %}
                 <tr>
-                    <td class="pull-left">{% firstof row.tipogasto__nombre row.tipogasto__clasificacion %}</td>
+                    <td>{% firstof row.tipogasto__nombre row.tipogasto__clasificacion %}</td>
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
 
                     <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
@@ -362,7 +372,7 @@
                 <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
                 <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
             </tr>
-        </table>
+          </table>
         </div>
 
         <div class="container">
@@ -374,49 +384,49 @@
 
         <div id="detail-2" class="row">
         <div class="col-md-12">
-        <h2><strong>Detalle de modificaciones en</strong> ingresos corrientes propios</h2>
-        <table class="table table-condensed">
-            <tr>
+        <h3><strong>Detalle de modificaciones en</strong> ingresos corrientes propios</h3>
+        <table class="table table-bordered">
+            <tr class="bg-primary">
                 <td></td>
                 <td></td>
-                <td colspan="4" class="success text-center">
+                <td colspan="4" class="text-center">
                     <h4>Modificación intermedia 
                         <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.actualizado }}" class="link-info">*</a>
                     </h4>
                 </td>
-                <td colspan="4" class="danger text-center">
+                <td colspan="4" class="text-center">
                     <h4>Modificación al cierre
                         <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.final }}" class="link-info">*</a>
                     </h4>
                 </td>
             </tr>
-            <tr class="info"> <th>Rubros de ingresos</th> <th>Inicial</th> 
+            <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th> 
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
-                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
+                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info blanco">%</a></th>
             </tr>
             {% for row in rubros %}
                 <tr>
-                    <td class="pull-left">{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
+                    <td>{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
 
-                    <td class="success text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
-                    <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
+                    <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
+                    <td class="text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
                     {% if row.actualizado_asignado %}
-                        <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                        <td class="montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
                     {% else %}
-                        <td class="success montos">0</td>
+                        <td class="montos">0</td>
                     {% endif %}
 
-                    <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|million|intcomma }}{% else %}0 {% endif %}</td>
-                    <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
-                    <td class="danger text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="text-right">{% if row.final_asignado %}{{ row.final_asignado|million|intcomma }}{% else %}0 {% endif %}</td>
+                    <td class="text-right">{% if row.final_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
                     {% if row.final_asignado %}
-                        <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                        <td class="montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
                     {% endif %}
                 </tr>
             {% endfor %}
-            <tr class="success bold">
+            <tr class="bg-primary bold">
                 <td>TOTAL</td>
                 <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
                 <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
@@ -460,49 +470,49 @@
         </table>
         </div>
         <div class="col-md-12">
-        <h2><strong>Detalle de modificaciones en</strong> gastos corrientes totales</h2>
-        <table class="table table-condensed">
-            <tr>
+        <h3><strong>Detalle de modificaciones en</strong> gastos corrientes totales</h3>
+        <table class="table table-bordered">
+            <tr class="bg-primary">
                 <td></td>
                 <td></td>
-                <td colspan="4" class="success text-center">
+                <td colspan="4" class="text-center">
                     <h4>Modificación intermedia 
                         <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.actualizado }}" class="link-info">*</a>
                     </h4>
                 </td>
-                <td colspan="4" class="danger text-center">
+                <td colspan="4" class="text-center">
                     <h4>Modificación al cierre
                         <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.final }}" class="link-info">*</a>
                     </h4>
                 </td>
             </tr>
-            <tr class="info"> <th>Rubros de ingresos</th> <th>Inicial</th> 
+            <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th> 
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
-                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
+                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info blanco">%</a></th>
             </tr>
             {% for row in rubrosg %}
                 <tr>
-                    <td class="pull-left">{% firstof row.tipogasto__nombre row.tipogasto__clasificacion %}</td>
-                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                    <td>{% firstof row.tipogasto__nombre row.tipogasto__clasificacion %}</td>
+                    <td>{{ row.inicial_asignado|million|intcomma }}</td>
 
-                    <td class="success text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
-                    <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
+                    <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
+                    <td class="text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
                     {% if row.actualizado_asignado %}
-                        <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                        <td class="montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
                     {% else %}
-                        <td class="success montos">0</td>
+                        <td class="montos">0</td>
                     {% endif %}
 
-                    <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|million|intcomma }}{% else %}0 {% endif %}</td>
-                    <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
-                    <td class="danger text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="text-right">{% if row.final_asignado %}{{ row.final_asignado|million|intcomma }}{% else %}0 {% endif %}</td>
+                    <td class="text-right">{% if row.final_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
                     {% if row.final_asignado %}
-                        <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                        <td class="montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
                     {% endif %}
                 </tr>
             {% endfor %}
-            <tr class="success bold">
+            <tr class="bg-primary bold">
                 <td>TOTAL</td>
                 <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
                 <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
