--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -184,7 +184,10 @@
 
     {% block footer_scripts_global %}
     <!-- Librería jQuery requerida por los plugins de JavaScript -->
+    <!--
     <script src="http://code.jquery.com/jquery.js"></script>
+    -->
+    <script src="{% static 'js/jquery-1.11.2.min.js' %}"></script>
 
     <!-- Todos los plugins JavaScript de Bootstrap (también puedes
          incluir archivos JavaScript individuales de los únicos
