--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -13,7 +13,7 @@
         <h2> <strong>Detalle de {{indicator_name}}</strong> <br/> del período</h2>
         <hr class="pma-line-2">
         <div class="col-md-7">
-            <div class="chart-update col-md-1 float-left">
+            <div class="chart-update col-md-1">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
@@ -22,12 +22,45 @@
             </div>
             <div class="col-md-11 chart-container bubbletree-container">
                 <div id="bubble-1" class="bubbletree-wrapper view-main">
-                    <div class="bubbletree"></div>
+                    <div class="bubbletree" id="bubbletree-1"></div>
                 </div>
                 <div id="pie" class="view-alternative"></div>
-                <div id="bar" class="view-main"></div>
+                <div id="bar" class="view-alternative"></div>
             </div>
         </div>
+        <div class="col-md-5 table-responsive">
+            <table class="table table-striped table-hover" id="datatable-1">
+                <thead>
+                    <tr class="bg-primary">
+                        <th class="text-left">Rubro de Ingreso</th>
+                        <th class="text-right">Inicial</th>
+                        <th class="text-right">Ejecutado</th>
+                        <th class="text-right">Porcentaje</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for row in rubros %}
+                <tr>
+                    <td>{% firstof row.tipoingreso__nombre row.tipogasto__nombre row.tipogasto__clasificacion %}</td>
+                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                    <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
+                    {% if row.inicial_asignado %}
+                        <td class="text-right">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
+                </tbody>
+                <tr class="">
+                    <td>TOTAL</td>
+                    <td class="text-right">{{ asignado|million|intcomma }}</td>
+                    <td class="text-right">{{ ejecutado|million|intcomma }}</td>
+                    <td class="text-right">{% if asignado %}{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%{% endif %}</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="row">
+        <hr class="pma-line-2">
         <div class="col-md-5 table-responsive">
             <table class="table table-striped table-hover" id="datatable-1">
                 <thead>
@@ -57,6 +90,22 @@
                     <td class="text-right">{% if asignado %}{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%{% endif %}</td>
                 </tr>
             </table>
+        </div>
+        <div class="col-md-7">
+            <div class="col-md-11 chart-container bubbletree-container">
+                <div id="bubble-2" class="bubbletree-wrapper view-main">
+                    <div class="bubbletree" id="bubbletree-2"></div>
+                </div>
+                <div id="pie-2" class="view-alternative"></div>
+                <div id="bar-2" class="view-alternative"></div>
+            </div>
+            <div class="chart-update col-md-1 float-left">
+                    <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
+                        aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-2"></span>
+                    <span id="chart-pie-1" class="pma-icon pe-7s-graph
+                        pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="pie-2"></span>
+                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" aria-hidden="true" data-chartcontainer="bar-2"></span>
+            </div>
         </div>
     </div>
 </div>
@@ -215,12 +264,12 @@
                     <tfoot>
                     <tr class="">                                                   
                         <td>TOTAL</td>                                                          
-                        <td>{{ rubrosg|total_sum:'inicial_asignado'|million|intcomma }}</td>
-                        <td>{{ rubrosg|total_sum:'ejecutado'|million|intcomma }}</td>
-                        {% with sum_asignado=rubrosg|total_sum:'inicial_asignado' %}
+                        <td>{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
+                        <td>{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
+                        {% with sum_asignado=rubros|total_sum:'inicial_asignado' %}
                         <td>
                             {% if sum_asignado %}
-                            {{ rubrosg|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:2|intcomma}}%
+                            {{ rubros|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:2|intcomma}}%
                             {% endif %}
                         </td>
                         {% endwith %}
@@ -560,10 +609,11 @@
     <script type="text/javascript" src="{% static 'js/Tween.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
     <script type="text/javascript" src="http://assets.openspending.org/openspendingjs/master/lib/aggregator.js"></script>
-    <script type="text/javascript" src="{% static 'js/expen.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/cofog.js' %}"></script>
     <script type="text/javascript">
-            var data = {{ bubble_data|safe }};
+            var data1 = {{ bubble_data|safe }};
     </script>
+    <script type="text/javascript" src="{% static 'js/pma-bubbletree.js' %}"></script>
     <script>
     $(document).ready(function(){
             $('[data-toggle="tooltip"]').tooltip({
